<resources>
    <string name="app_name">MedRecord</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="medicine">Medicine</string>
    <string name="records">Records</string>
    <string name="conditions">Conditions</string>
    <string name="more">More</string>
    <string name="welcome_to_medrecords_guankeelim">Welcome to MedRecords, guankeelim!</string>
    <string name="appointments">Appointments</string>
    <string name="choose_file">Choose file</string>
    <string name="enter_file_name">Enter file name</string>
    <string name="upload">Upload</string>
    <string name="show_uploads">Show Uploads</string>
    <string name="title_activity_images">ImagesActivity</string>
</resources>